--- a/yaml/deployment/statistics-service-deployment.yaml
+++ b/yaml/deployment/statistics-service-deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: statistics-service
@@ -7,6 +7,9 @@ metadata:
     name: statistics-service
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+        name: statistics-service 
   template:
     metadata:
       labels:
