--- a/yaml/deployment/account-mongodb-deployment.yaml
+++ b/yaml/deployment/account-mongodb-deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1 
 kind: Deployment
 metadata:
   name: account-mongodb
@@ -7,6 +7,9 @@ metadata:
     name: account-mongodb
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+        name: account-mongodb
   template:
     metadata:
       labels: 
