--- a/yaml/deployment/auth-mongodb-deployment.yaml
+++ b/yaml/deployment/auth-mongodb-deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: auth-mongodb
@@ -7,6 +7,9 @@ metadata:
     name: auth-mongodb
 spec:
   replicas: 1
+  selector:
+     matchLabels:
+        name: auth-mongodb
   template:
     metadata:
       labels:
