--- a/yaml/deployment/auth-service-deployment.yaml
+++ b/yaml/deployment/auth-service-deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion:  apps/v1
 kind: Deployment
 metadata:
   name: auth-service
@@ -7,6 +7,9 @@ metadata:
     name: auth-service
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+        name: auth-service
   template:
     metadata:
       labels:
