--- a/yaml/deployment/config-deployment.yaml
+++ b/yaml/deployment/config-deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: config
@@ -7,6 +7,9 @@ metadata:
     name: config
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+        name: config
   template:
     metadata:
       labels:
