--- a/yaml/deployment/gateway-deployment.yaml
+++ b/yaml/deployment/gateway-deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: gateway
@@ -7,6 +7,9 @@ metadata:
     name: gateway
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+        name: gateway
   template:
     metadata:
       labels:
