--- a/yaml/deployment/monitoring-deployment.yaml
+++ b/yaml/deployment/monitoring-deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: monitoring
@@ -7,6 +7,9 @@ metadata:
     name: monitoring
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+        name: monitoring
   template:
     metadata:
       labels:
